--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,10 +17,10 @@
 <tr><td><h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/9/12/n12399155.md#1" target="_blank">癌症是慢性发炎的结果 名医推荐抗发炎好食物</a><br></h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/20/9/12/n12399155.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/shutterstock_1602831712-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/11/n12803636.md#1" target="_blank">【重播】喝茶助防疫吗？6大茶系怎么选</a><br></h3>
+<h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/12/n12805998.md#1" target="_blank">做有氧运动比肌肉训练更好？增肌10大迷思破解</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/12/n12808226.md#1" target="_blank">三大坏坐姿排名 第一名是它！教你正确坐姿</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/13/n12808403.md#1" target="_blank">五种食物加强你的免疫系统 而且很常见</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/13/n12809223.md#1" target="_blank">发胖唯一原因是吃多？用对方法不算卡路里也减肥</a><br></h3>
-<h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/14/n12809857.md#1" target="_blank">驼背带来9大坏处！简单2招 轻松矫正驼背</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/16/n12815193.md#1" target="_blank">3种“天然洗发水” 改善掉发、白发</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/17/n12818226.md#1" target="_blank">【慧聊养生】人老腿先衰 萝卜腿不好看但防老</a><br></h3>
 <h3><a href="https://github.com/jcaojz3768/djy/blob/master/gb/21/3/18/n12818954.md#1" target="_blank">癌症病人能打新冠疫苗吗？医师：一类癌症要谨慎</a><br></h3>
